--- a/application/views/scripts/auth/logout.phtml
+++ b/application/views/scripts/auth/logout.phtml
@@ -1,4 +1,3 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Auth</b> and script/action name <b>logout</b></p>
-</div>
+<?php
+    $this->title = "Logging out...";
+?>
