added stories layout

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -15,6 +15,7 @@
 
     // set scripts
     $this->headScript()->prependFile('/js/jquery-1.7.1.min.js');
+    $this->headScript()->appendFile('/js/bootstrap.min.js');    
     $this->headScript()->appendFile('/js/custom.js');
     
     // set metas
