--- a/application/views/scripts/auth/signup.phtml
+++ b/application/views/scripts/auth/signup.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->title = "Please fill the form to sign up:";
+    $this->myCustomTitle = "Sign up";
     if (isset($this->errMessage)) {
 	echo '<div class="alert alert-error">'.$this->errMessage.'</div>';
     }
