--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,10 +1,8 @@
 <?php
-
-    // set head title separator
-    $this->headTitle()->setSeparator(' - ');
     
     // set title
     $this->headTitle($this->myCustomTitle)
+                    ->setSeparator(' - ')
                     ->prepend('Simple Task Manager');   
  
     // set styles    
