--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -12,9 +12,9 @@
                      ->headLink(array('rel' => 'favicon', 'href' => '/img/favicon.png'));
 
     // set scripts
-    $this->headScript()->prependFile('/js/jquery-1.7.1.min.js');
-    $this->headScript()->appendFile('/js/bootstrap.min.js');    
-    $this->headScript()->appendFile('/js/custom.js');
+    $this->headScript()->prependFile('/js/jquery-1.7.1.min.js')
+                       ->appendFile('/js/bootstrap.min.js')
+                       ->appendFile('/js/custom.js');
     
     // set metas
     $this->headMeta()->appendName('description', 'test zend framework project')
