--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -42,3 +42,13 @@ body {
 .storyComments textarea {
     width:99%;
 }
+.storyComments pre {
+    position: relative;
+    padding-right: 22px;
+}
+.removeComment{
+    position:absolute;
+    top:4px;
+    right:4px;
+    cursor: pointer;
+}
