modal dialogs for delete actions

--- a/application/views/scripts/stories/index.phtml
+++ b/application/views/scripts/stories/index.phtml
@@ -2,6 +2,34 @@
     $statuses = array('New','Started','Finished','Accepter','Rejected'); 
 ?>
 
+<div class="modal" id="deleteCommentModal">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>Delete confirmation</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this comment?</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn btn-primary">Yes</a>
+    <a href="#" class="btn btnModalClose">No, thanks</a>
+  </div>
+</div>
+
+<div class="modal" id="deleteStoryModal">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>Delete confirmation</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this story?</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn btn-primary">Yes</a>
+    <a href="#" class="btn btnModalClose">No, thanks</a>
+  </div>
+</div>
+
 <div class="row">
     
     <div class="span2 well" style="padding: 8px 0;">
@@ -51,7 +79,7 @@
                     <li><a href="#"><i class="icon-ok"></i> Accept</a></li>
                     <li><a href="#"><i class="icon-retweet"></i> Reject</a></li>
 		    <li class="divider"></li>
-		    <li><a href="#"><i class="icon-remove"></i> Delete Story</a></li>
+		    <li><a href="#" class="deleteStory" storyID="<?php echo $story['content']['id']; ?>"><i class="icon-remove"></i> Delete Story</a></li>
                 </ul>
             </div>
              <a class="btn commentbutton tooltiped" data-original-title="Toggle comments (<?php echo $commentsCount; ?>)" data-toggle="button"><i class="icon-comment"></i></a>
