--- a/application/views/scripts/stories/delete-story.phtml
+++ b/application/views/scripts/stories/delete-story.phtml
@@ -1,4 +1,1 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Stories</b> and script/action name <b>deleteStory</b></p>
-</div>
+<?php echo $this->json($this->output,false); ?>
