form css styling

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -68,3 +68,27 @@ a.removeComment:hover{
     text-decoration: none;
     filter: alpha(opacity=0);    
 }
+.zend_form dt label {
+    color: #666;
+    padding-left: 8px;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    margin-bottom: 0;
+}
+
+.zend_form ul.errors {
+    margin: 0;
+}
+.zend_form ul.errors li{
+    list-style: none;
+    color: #B94A48;
+    margin: 8px 0;
+    background-color: #F2DEDE;
+    padding: 8px 35px 8px 14px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    border: 1px solid #EED3D7;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    width: 170px;
+}
