--- a/application/views/scripts/stories/update-story-status.phtml
+++ b/application/views/scripts/stories/update-story-status.phtml
@@ -1,4 +1,1 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Stories</b> and script/action name <b>updateStoryStatus</b></p>
-</div>
+<!-- this should be blank -->
